src/objects/ADvendio__Selected_Country__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Campaign_Item__c</fullName>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipName>Selected_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>ADvendio__Country__c</referenceTo>
        <relationshipName>Campaign_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Selected Country</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Campaign_Item__c</columns>
        <columns>ADvendio__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{0}</displayFormat>
        <label>Selected Country No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>